Fix overlapping elements (accessibility)

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,11 +1,11 @@
-.ui.link.list .item, .ui.link.list .item a:not(.ui), .ui.link.list a.item {
+footer .ui.link.list .item, .ui.link.list .item a:not(.ui), .ui.link.list a.item {
   color: rgba(0,0,0,.8);
   padding: .6em 0;
   font-size: 1.1em;
   margin: 0 0 .575em 0;
 }
 
-.ui.link.list.list .item a:not(.ui):hover, .ui.link.list.list a.item:hover {
+footer .ui.link.list.list .item a:not(.ui):hover, .ui.link.list.list a.item:hover {
   color: rgba(0,0,0,1);
 }
 
